# MultiStepServer

./: .gitignore  Dockerfile  Makefile  mbt-server.cabal  mbt.db  my-httpd.conf
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
html/: index.html  index1.html  index2.html  test.html  tutor.css
src/: Main.hs
src/Communication/: ParseExpr.hs
src/Diagnosis/: MBTdiagnosis.hs  PTdiagnosis.hs  RelationTree.hs
src/FSMMaker/: FSM.hs  Rules.hs  StrategyBas.hs  Trails.hs
src/Ideas/Text/: JSON.hs  UTF8.hs
src/Ideas/Utils/: Parsing.hs
src/Polynomial/: BuggyStrat.hs  ExprPoly.hs  LoopDiv.hs  MultiPoly.hs  NumDiv.hs  PolyBuggys.hs  PolyDiagnosis.hs  PolyLift.hs  PolyRelations.hs  PolyRules.hs  PolyStrat.hs  SinglePoly.hs
src/Regulation/: Focus.hs  Lift.hs  Search.hs  Tracer.hs
src/SymbolRoot/: ComplexRoot.hs  ExprRoot.hs  FactorInteger.hs  SymbolRoot.hs
src/Utils/: ComplexNum.hs  Num2Frac.hs  Utils.hs
